looks good on mobile. only problem was the height issue I couldn't fix....

--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -3,12 +3,31 @@
 
 .projectCard {
     position: relative;
-    width: 32%;
+    width: 48%;
+
+    @include desktop {
+        width: 32%;
+    }
+    @include tablet {
+        height: 17rem;
+    }
+    @include mobile {
+        display: flex;
+        align-items: center;
+        width: 100%;
+    }
     
     &__img {
         width: 100%;
         height: 15rem;
         border-radius: 25px;
+
+        @include tablet {
+            height: 100%;
+        }
+        @include mobile {
+            height: 80%;
+        }
     }
 
     &__caption {
@@ -27,6 +46,14 @@
         padding: 1rem;
         transition: 0.25s;
         transition-timing-function: ease-in-out;
+
+        @include tablet {
+            height: 17rem;
+        }
+        @include mobile {
+            height: 80%;
+            top: 10%;
+        }
         
         &:hover {
             transition: 0.25s;
